added package analyzer for project package analysis

--- a/src/app/features/customer/shared/customerform/customerform.component.html
+++ b/src/app/features/customer/shared/customerform/customerform.component.html
@@ -18,10 +18,11 @@
             <div class="row">
               <div class="col-md-6 col-sm-6 mx-auto">
                 <mat-form-field class="example-full-width">
+                  <mat-label>First Name</mat-label>
                   <input
                     matInput
                     type="text"
-                    placeholder="First name"
+                    placeholder="Santosh"
                     formControlName="fname"
                     id="fname"
                   />
@@ -36,10 +37,11 @@
             <div class="row">
               <div class="col-md-6 col-sm-6 mx-auto">
                 <mat-form-field class="example-full-width">
+                  <mat-label>Last Name</mat-label>
                   <input
                     matInput
                     type="text"
-                    placeholder="Last name"
+                    placeholder="Shrestha"
                     formControlName="lname"
                     id="lname"
                     fxlayoutalign="column"
@@ -51,13 +53,15 @@
                 </mat-form-field>
               </div>
             </div>
+            <!-- ADDRESS -->
             <div class="row">
               <div class="col-md-6 col-sm-6 mx-auto">
                 <mat-form-field class="example-full-width">
+                  <mat-label>Address</mat-label>
                   <input
                     matInput
                     type="text"
-                    placeholder="Address"
+                    placeholder="Damak"
                     formControlName="address"
                   />
                   <mat-hint align="end">Enter customer's address</mat-hint>
@@ -70,10 +74,11 @@
             <div class="row">
               <div class="col-md-6 col-sm-6 mx-auto">
                 <mat-form-field class="example-full-width" align="center">
+                  <mat-label>Mobile</mat-label>
                   <input
                     matInput
                     type="number"
-                    placeholder="Mobile number"
+                    placeholder="9842641425"
                     formControlName="mobile"
                   />
                   <mat-hint align="end"
