--- a/src/app/features/interest/shared/interest-form/interest-form.component.html
+++ b/src/app/features/interest/shared/interest-form/interest-form.component.html
@@ -20,20 +20,26 @@
 
               <div class="row">
                 <div class="col-md-6 col-sm-6 mx-auto mb-4 mt-4">
-                  <mat-form-field class="example-full-width">
-                    <input
-                      matInput
-                      type="number"
-                      placeholder="Amount"
-                      formControlName="amount"
-                      id="amount"
-                    />
-                    <mat-hint align="end">Amount given to the client.</mat-hint>
-                    <mat-error
-                      *ngIf="interestForm.controls['amount'].invalid"
-                      >{{ getAmountErrorMessage() }}</mat-error
-                    >
-                  </mat-form-field>
+                  <ganapati-form-group>
+                    <mat-form-field class="example-full-width">
+                      <mat-label>Amount</mat-label>
+
+                      <input
+                        matInput
+                        type="number"
+                        placeholder="eg. 25000"
+                        formControlName="amount"
+                        id="amount"
+                      />
+                      <mat-hint align="end"
+                        >Amount given to the client.</mat-hint
+                      >
+                      <mat-error
+                        *ngIf="interestForm.controls['amount'].invalid"
+                        >{{ getAmountErrorMessage() }}</mat-error
+                      >
+                    </mat-form-field>
+                  </ganapati-form-group>
                 </div>
               </div>
 
@@ -47,6 +53,7 @@
                       matInput
                       [matDatepicker]="picker2"
                       formControlName="nepDate"
+                      placeholder="2077/06/05"
                     />
                     <mat-datepicker-toggle
                       matSuffix
